tests/valid/subdir/bring_outer.main.w
bring "../baz.w" as baz;
