tests/invalid/subdir/other.w
bring "./inner" as inner;
// Error: "Foo" is defined multiple times in "./inner"
